--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/header.css" />
     <!--aggiungi link al reset.css -->
-    <title>Document</title>
+    <title>Medium</title>
   </head>
   <body>
     <header>
